--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 
-<script src="js/scripts.js"></script>
+  
+<!--JavaScript  -->
+<script type="text/javascript" src="js/scripts.js"></script>
 </body>
 </html>
