--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+  <h1 id="header">Nikki</h1>
+  <div class=hb></div>
+  <button id='btn'>Add</button>
+
+  <button>1</button>
+  <button>2</button>
+  <button>3</button>
+  <button>4</button>
+  <button>5</button>
+
 
 <script src="js/scripts.js"></script>
 </body>
