--- a/index.html
+++ b/index.html
@@ -5,9 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
+<body class='bgndc'>
+  <h1 id="title"></h1>
+  <!-- <div id="add">
+    <ul>
+      <li>Bella</li>
+      <li>Simba</li>
+      <li>Precious</li>
+      <li></li>
+      <li></li>
+    </ul>
+  </div> -->
 
 <script src="js/scripts.js"></script>
 </body>
