--- a/index.html
+++ b/index.html
@@ -7,7 +7,21 @@
   <title>Document</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
+<body
+<!-- <form action="" name= "loginForm">
+  <label for="">First Name</label>
+  <input id="first-name" type="text" name="firstName">
+  <button type= "submit" name="button">Submit</button>
+</form>
+
+<form action="">
+  <label for="">Last Name</label>
+  <input id="last-name" type="text">
+  <button type= "submit">Submit</button>
+</form> -->
+
+<button id="btn1">Button 1</button>
+<button id="btn2">Button 2</button>
 
 <script src="js/scripts.js"></script>
 </body>
