--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+  <button onclick='mySetItem()'>Set value</button> <button onclick='myGetItem()'>Get value</button> <button onclick='myClearItem()'>Clear value</button>
 
 <script src="js/scripts.js"></script>
 </body>
